--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -2,8 +2,8 @@
 ---
 
 // Colors
-$primary: #e5261f;
-$primary-dark: #a01b16;
+$primary: #3264a8;
+$primary-dark: #3432a8;
 $secondary: #f88379;
 $black: #2f2f41;
 $white: #ffffff;
